tests/neg-macros/delegate-match-3/Test_2.scala

class Test extends App {
  f // error
}
